<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_wallpaper" >

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_top_background" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:text="@string/login_account_textview"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@id/accountEdtTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:hint="@string/login_account_edittext"
                android:singleLine="true"
                android:textColor="@color/black"
                android:background="@null"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bottom_background" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:text="@string/login_password_textview"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@id/passEdtTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/login_password_edittext"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:background="@drawable/login_bottom_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:text="@string/logon_confirm_pw_textview"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/confirmPassEdtTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:hint="@string/logon_confirm_pw_exittext"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp" 
                android:cursorVisible="true" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@id/logonBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_login"
        android:text="@string/logon_button"
        android:textColor="@color/white" />

</RelativeLayout>