<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/main_bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/main_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal" 
            android:background="@color/yinhui">

            <RadioButton
                android:id="@+id/radio_button_people"
                style="@style/main_tab_bottom"
                
                android:drawableTop="@drawable/maintab_btn_main"
                android:background="@drawable/maintab_btn_bg"
                android:text="@string/main_people" />

            <RadioButton
                android:id="@+id/radio_button_news"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/maintab_btn_main"
                android:background="@drawable/maintab_btn_bg"
                android:text="@string/main_news" />

            <RadioButton
                android:id="@+id/radio_button_setting"
                style="@style/main_tab_bottom"
                android:checked="true"
                android:drawableTop="@drawable/maintab_btn_setting"
                android:background="@drawable/maintab_btn_bg"
                android:text="@string/main_set" />
        </RadioGroup>
    </LinearLayout>

</TabHost>