<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/user_info_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="30dip"
            android:orientation="horizontal" >

            <FrameLayout
                android:layout_width="60.0dip"
                android:layout_height="60.0dip"
                android:layout_marginLeft="15dip" >

                <ImageView
                    android:id="@+id/headPicImageView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:src="@drawable/account_photo_bg" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:src="@drawable/portrait_round" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/me_my_fans_bg"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/nickNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:textColor="#ffffff"
                    android:hint="@string/user_info_nick_name"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
        <!-- 简介 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30dip"
            android:layout_gravity="bottom"
            android:background="#22000000"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/intor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:text="@string/user_info"
                android:textColor="#ffffff" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="16dip"
        android:background="@drawable/more_item_press"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:text="@string/user_info_sex"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sexTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="16dip"
        android:background="@drawable/more_item_press"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:text="@string/user_info_telephont"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/telephoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="16dip"
        android:background="@drawable/more_item_press"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:text="@string/user_info_account"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/editBut"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="16dip"
        android:background="@drawable/more_item_press"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/user_into_modify_info"
        android:textColor="@color/black"
        android:textSize="20sp" >
    </Button>

</LinearLayout>